angular_flask/static/styles/style.css
html {
	margin-left: 10px;
	margin-right: 10px;
	font: 200 27px/45px 'Raleway', sans-serif;
}

#winston {
	display: block;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	padding-top: 5px;
	font: 800 32px/35px 'Raleway', sans-serif;
}

/*
Accordion/Search
*/

#search-by-all {
	font: 900 15px/30px 'Raleway', sans-serif;
	text-align: center;
}

#add-button {
	position: relative;
	top: -18px;
	float: right;
}

.ng-binding {
	display: block;
	padding: 10px 15px;
    margin: -10px -15px;
}

/*
Schedule
*/

#generate-button {
	float: right;
}

#shopping-cart-size {
	position: fixed;
	top: 5px;
	right: 20px;
}

#next {
	padding-left: 10px;
}

#prev {
	padding-right: 5px;
}

.buttons {
	padding-bottom: 10px;
}

#clear {
	position: fixed;
	top: 5px;
	right: 34%;
}

#shopping-cart {
	position: fixed;
	top: 5px;
	right: 10%;
}

#show-accordion {
	float: right;
}


#schedules {
	display: block;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	font: 800 15px/30px 'Raleway', sans-serif;
}

 .fc-view-agendaWeek .fc-today {
     color:#ffffff;
     background:#ffffff;
  }


/*
List of added
*/

#added {
	display: block;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	font: 800 15px/30px 'Raleway', sans-serif;
}

/*
Misc
*/

/*Something Angular UI requires to make work*/
.nav, .pagination, .carousel, .panel-title, a { 
	cursor: pointer; 
}

